style: Fixed menu on mobile

--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -149,7 +149,7 @@
   .wrapper {
     margin: 1.5em 10em;
 
-    text-align: center;
+    text-align: left;
     section.hero {
       text-align: center;
       margin-bottom: 10em;
